pkl-core/src/test/files/LanguageSnippetTests/input/errors/mappingTypeCheckError2.pkl
res: Mapping<String, String> = new {
  ["foo"] = 1
}
